Model Hive + Crud inicial + Swagger
