# BackEnd/Models/Hive_Model.py
@@ -1,0 +1,45 @@
+import uuid
+from datetime import datetime, timezone
+
+class Hive:
+    def __init__(self, usuario_id, titulo, descricao, esporte_nome, localizacao, endereco, data_hora,
+                 max_participantes,  foto=None,
+                 participantes=None, pendentes=None, privado=False, observacoes=None, status=None):
+
+        self.id = str(uuid.uuid4())
+        self.usuario_id = usuario_id
+        self.titulo = titulo
+        self.descricao = descricao
+        self.esporte_nome = esporte_nome
+        self.localizacao = localizacao
+        self.endereco = endereco
+        self.data_hora = data_hora
+        self.max_participantes = max_participantes
+        self.data_criacao = datetime.now(timezone.utc)
+        self.foto = foto
+        self.participantes = participantes if participantes is not None else []
+        self.pendentes = pendentes if pendentes is not None else []
+        self.privado = privado
+        self.observacoes = observacoes if observacoes else ""
+        self.status = status
+
+
+    def to_dict(self):
+        return {
+            'id': self.id,
+            'usuario_id': self.usuario_id,
+            'titulo': self.titulo,
+            'descricao': self.descricao,
+            'esporte_nome': self.esporte_nome,
+            'localizacao': self.localizacao,
+            'endereco': self.endereco,
+            'data_hora': self.data_hora.isoformat() if isinstance(self.data_hora, datetime) else self.data_hora,
+            'max_participantes': self.max_participantes,
+            'data_criacao': self.data_criacao.isoformat(),
+            'foto': self.foto,
+            'participantes': self.participantes,
+            'pendentes': self.pendentes,
+            'privado': self.privado,
+            'observacoes': self.observacoes,
+            'status': self.status
+        }
